# Cheat_Quake1

./: .gitignore  Cargo.toml  README.md  offsets.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  util.rs
crates/cli/src/cmd/: find.rs  hp.rs  inspect.rs  mod.rs  modules.rs  players.rs  scan.rs  snapshot.rs
crates/memory/: Cargo.toml
crates/memory/src/: handle.rs  lib.rs  process.rs
crates/process/: Cargo.toml
crates/process/src/: discovery.rs  handle.rs  lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs  scan.rs  stride.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: constants.rs  entitystate.rs  lib.rs  playerstate.rs  snapshot.rs  trajectory.rs  vector.rs
docs/: reverse-engineering.md
