[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line tools that drive the Cheat_Quake1 stack"

[dependencies]
bytemuck.workspace = true
process = { path = "../process" }
scanner = { path = "../scanner" }
sdk = { path = "../sdk" }

[[bin]]
name = "find-process"
path = "src/bin/find_process.rs"

[[bin]]
name = "read-hp"
path = "src/bin/read_hp.rs"

[[bin]]
name = "inspect-entity"
path = "src/bin/inspect_entity.rs"

[[bin]]
name = "scan-entities"
path = "src/bin/scan_entities.rs"

[[bin]]
name = "list-modules"
path = "src/bin/list_modules.rs"

[[bin]]
name = "dump-players"
path = "src/bin/dump_players.rs"

[[bin]]
name = "dump-snapshot"
path = "src/bin/dump_snapshot.rs"
